<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:orientation="vertical"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/darkred"
        >

        <Button
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back"
            style="@style/navbarRed"/>
        <Button
            android:id="@+id/home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home"
            style="@style/navbarRed"/>
        <Button
            android:id="@+id/logout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/logout"
            style="@style/navbarRed"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@android:dimen/app_icon_size"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_name"
            android:drawablePadding="@dimen/drawable_padding"
            android:ems="10"
            android:hint="@string/name"/>

        <TextView
            android:layout_marginTop="@android:dimen/app_icon_size"
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="@dimen/drawable_padding"
            android:ems="10"
            android:hint="@string/email" />

        <Button
            android:id="@+id/changePass"
            style="@style/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@android:dimen/app_icon_size"
            android:background="@drawable/bg_button_register"
            android:text="@string/changepassword" />

        <Button
            android:id="@+id/delete"
            style="@style/logoutButton"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@android:dimen/app_icon_size"
            android:background="@drawable/bg_button_register"
            android:text="@string/deleteaccount" />

    </LinearLayout>

</LinearLayout>