<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPassword"
    android:orientation="vertical"
    android:background="@drawable/bg_button_register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/darkskyblue"
        >

        <Button
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back"
            style="@style/navbarRed"/>

        <Button
            android:id="@+id/login"
            style="@style/navbarRed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home" />
        <Button
            android:id="@+id/signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/signup"
            style="@style/navbarRed"/>
    </LinearLayout>

    <EditText
        android:layout_marginTop="@android:dimen/app_icon_size"
        android:layout_gravity="center"
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="@dimen/drawable_padding"
        android:hint="@string/email"
        android:ems="10"
        android:autofillHints=""
        android:inputType="" />

    <Button
        android:layout_gravity="center"
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resetpassword"
        android:background="@drawable/bg_button_register"/>

</LinearLayout>