<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addChannelBack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back"
            style="@style/navbarAddChannel"/>
        <Button
            android:id="@+id/addChannelHome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home"
            style="@style/navbarAddChannel"/>
        <Button
            android:id="@+id/addChannelLogout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/logout"
            style="@style/navbarAddChannel"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/heading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/newChannel" />
    </LinearLayout>

    <EditText
        android:id="@+id/newChannelName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        style="@style/CategoryStyle"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/addChannel"
        />

    <Button
        android:id="@+id/addChannelSubmit"
        android:layout_marginTop="20dp"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bg_button_register"
        android:text="@string/newChannel" />

</LinearLayout>