<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".HomeActivity">
        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/profile"
                style="@style/logoutButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:text="@string/profile" />

            <Button
                android:id="@+id/homeLogout"
                style="@style/logoutButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:text="@string/logout" />

        </LinearLayout>

    <TextView
        android:id="@+id/Channel"
        style="@style/CategoryStyle"
        android:textSize="35sp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/bg_channels"
        android:text="@string/channels" />

        <TextView
            android:id="@+id/members"
            style="@style/CategoryStyle"
            android:textSize="35sp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/bg_members"
            android:text="@string/members" />

</LinearLayout>