<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/bg_channels"
        >

        <TextView
            style="@style/CategoryStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/synapse" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/login"
                style="@style/navbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_button_register"
                android:text="@string/login"
                app:layout_constraintBottom_toTopOf="@+id/signup" />

            <Button
                android:id="@+id/signup"
                style="@style/navbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_button_register"
                android:text="@string/signup" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/messages"/>

</LinearLayout>