<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/darkskyblue"
        >

        <Button
            android:id="@+id/channelHome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home"
            style="@style/navbar"/>
        <Button
            android:id="@+id/channelLogout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/logout"
            style="@style/navbar"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/refresh"
            android:layout_gravity="center"
            style="@style/heading"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:layout_weight="1"
            android:src="@drawable/ic_refresh_black_24dp"
            android:contentDescription="TODO" />
        <TextView
            style="@style/heading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/channels" />
        <Button
            android:id="@+id/addChannel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ic_add_white_24dp"
            android:layout_margin="0dp"
            android:layout_marginRight="7dp"
            />
    </LinearLayout>


    <ListView
        android:id="@+id/channelList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="7dp"
        android:background="@color/darkpurple"
        >
    </ListView>

</LinearLayout>